#49 Implement Intro page
Intro fixes.

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.intro/content/styles/root.css
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/content/styles/root.css
@@ -41,6 +41,7 @@
     padding-right: 10%;
     padding-left: 10%;
     font-size: large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .content-help {
